k8s/aliyun-logs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aliyun-log
spec:
  containers:
  - name: aliyun-log
    image: 'registry.cn-hangzhou.aliyuncs.com/log-service/docker-log-test:latest'
    volumeMounts:
    - name: volumn-sls-aliyun-log
      mountPath: /var/log
  volumes:
  - name: volumn-sls-aliyun-log
    emptyDir: {}
