k8s/status_test_qdrant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-qdrant
  name: test-qdrant
  namespace: uat
spec:
  replicas: 1
  selector:
    matchLabels:
      name: test-qdrant
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: test-qdrant
    spec:
      containers:
        - image: 'registry.us-east-1.aliyuncs.com/updf/u-ai-qdrant:v1.2.2'
          imagePullPolicy: Always
          name: test-qdrant
          ports:
            - containerPort: 6333
              hostPort: 6333
              name: qdrant-port
              protocol: TCP
            - containerPort: 6334
              hostPort: 6334
              name: grpc-port-port
              protocol: TCP
          resources:
            requests:
              cpu: '2'
              memory: 4Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /qdrant/storage
              name: qdrant-vloume
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: qdrant-vloume
          persistentVolumeClaim:
            claimName: test-uai-qdrant
