k8s/u-ai-dep-svc.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: u-ai_server
  labels:
    app: u-ai_server
  namespace: u-ai
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      name: u-ai_server
  template: 
    metadata: 
      labels: 
        name: u-ai_server
    spec:
      containers: 
        - name: u-ai_server
          image: registry.us-east-1.aliyuncs.com/updf/u-ai_server:v0.0.1
          imagePullPolicy: Always
          ports: 
            - name: server_port
              containerPort: 8895


apiVersion: v1
kind: Service
metadata: 
  name: u-ai-server
  namespace: u-ai
spec:
  type: ClusterIP
  ports:
  - name: u-ai-server-port
    port: 8895
    targetPort: 8895
    protocol: TCP
  selector: 
    name: u-ai-server




apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: u-ai-server
  namespace: u-ai
  annotations:
    alb.ingress.kubernetes.io/rewrite-target: /v1/ai/*
  name: rewrite-ingress
spec:
  ingressClassName: alb
  rules:
  - host: apis.updf.com
    http:
      paths:
      - path: /v1test/ai/(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: u-ai-server
            port:
              number: 8895
